[package]
name = "chromosome_distance_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.40.0", features = ["ipc", "lazy", "dtype-u8", "dtype-u16"] }
arrow = { version = "55.1.0", features = ["ipc"] } 
rayon = "1.10.0"
crossbeam-channel = "0.5.13" # Ensure this is a recent enough version, 0.5.13 should be fine.
num_cpus = "1.16.0"
flate2 = "1.0.30"