[package]
name = "chromosome_distance_calculator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow = { version = "55.1.0", features = ["ipc"] } # Re-added for IPC generation
flate2 = "1.0.30"
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.69"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "console",
]

[profile.release]
lto = true
opt-level = 's'